Veretino 0.6.0
What's new:
* Improved database storage format. Now files with the *.ver extension are compressed.
* When working with non-writable folders, the location of the database file is now user-selectable.
    (previously it was saved to the Desktop)
* Also a more reliable process for saving databases.
* More accurate detection of the presence of a checksum string in the clipboard (for file verification).

Internal changes:
* The way of processing JSON file data has been redesigned.
* Switched to CMake-only.

---
Veretino 0.5.2
* Implemented the ability to detect Moved files.
    Added item Status: "Moved". It will mark renamed or moved files [if enabled in settings].
    An item will be marked with the "Moved" status if its computed checksum matches any Missing item's one.
* Implemented the ability to Import checksums from existing Branches (subfolder databases) and Digest files.
    This can only be done for New Items. Once completed, they are assigned a new status: Imported.
    Further work with them is no different from parsed ones.
* DateTime stamp inheritance during Branching has become a bit smarter.
    If the selected subfolder contains only checked and matched items, the Branch will be created with a new timestamp, as a new DB.
* Improved Presets for filterable file types.
* Minor improvements to UI and dialog boxes.
* Multiple minor optimizations.

---
Veretino 0.5.1
* Fixed saving the DB file name prefix.
* Optimization of manual input of the filtered types list.

---
Veretino 0.5.0
What's new:
* New Database Creation Dialog, combining basic settings and filter creation.
* A newly creating database can be flagged as immutable ("Deny Changes"), which will prevent changes to it in the future.
* Improved file type filter creation process.
    Instead of a Permanent filter, selected extensions can be flexibly remembered between sessions, adapting to the contents of working folders.