@@ -3,8 +3,9 @@ What's new:
 * Improved database storage format. Now files with the *.ver extension are compressed.
 * When working with non-writable folders, the location of the database file is now user-selectable.
     (previously it was saved to the Desktop)
-* Also a more reliable process for saving databases.
+* More reliable database saving process.
 * More accurate detection of the presence of a checksum string in the clipboard (for file verification).
+* Added support for checking using the outdated (but still used) MD5 algorithm.
 
 Internal changes:
 * The way of processing JSON file data has been redesigned.
